further details of movies. progress bar added to main activity. still to add in about.
need to add swipe options for tv shows

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/movies"
         android:label="@string/app_name"
         android:roundIcon="@drawable/movies"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
         <activity android:name=".About_Movie" />
         <activity android:name=".HomeActivity">
             <intent-filter>
@@ -20,6 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TVShows_main"></activity>
     </application>
 
 </manifest>
