movies data. added see more. swipe options for tv series added.
need to add tv series now...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TVShows_main"></activity>
+        <activity android:name=".TVShows_main" />
+        <activity android:name=".About_TV"></activity>
     </application>
 
 </manifest>
